# MagicaVoxel_File_Writer_for_Rust

./: Cargo.toml  LICENSE  README.md
doc/: VoxWriter.cpp
examples/: sample1.rs  sample2.rs  sample3.rs
src/: lib.rs  main.rs  vox_writer.rs
