[package]
name = "vox_writer"
version = "0.1.5"
edition = "2021"
description = "A simple writer module for MagicaVoxel file format"
license = "MIT"
repository = "https://github.com/aiekick/MagicaVoxel_File_Writer_for_Rust"
authors = ["Stephane Cuillerdier (aka aiekick) <aiekick@funparadigm.com>"]
readme = "README.md"
keywords = ["vox", "magicavoxel", "3d", "file", "writer"]
categories = ["data-structures", "encoding", "parsing", "parser-implementations"]
exclude = [
    "/.github/*",
    "/main*",
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
